[update] fix sizing on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -115,8 +115,31 @@
   --sidebar-ring: oklch(0.38 0.189 293.745);
 }
 
+.snap-container {
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+}
 
-
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;     /* Firefox */
+  }
+  .snap-container {
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+}
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;             /* Safari and Chrome */
+  }
+}
 /* :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
